skins/larry/mail.css
/* ... */
#searchfilter {
	width: 16em;
}

#mailview-left select.mailboxlist {
	position: relative;
	top: 10px;
	width: 100%;
}

#messagetoolbar {
	position: absolute;
	top: -6px;
	right: 0;
	left: 15em;
	height: 40px;
	white-space: nowrap;
}

#messagetoolbar.fullwidth {
	left: 0;
}

#mailtoolbar {
	text-align: right;
}

#mailpreviewtoggle {
	display: block;
	position: absolute;
	top: 4px;
	right: 2px;
	width: 20px;
	height: 18px;
	background: url(images/buttons.png) -3px -458px no-repeat;
}

#mailpreviewtoggle.enabled {
	background-position: -28px -458px;
}


/*** message list ***/

#messagelist tr td.attachment,
#messagelist tr td.threads,
#messagelist tr td.status,
#messagelist tr td.flag,
#messagelist tr td.priority {
	width: 20px;
	padding: 2px 3px;
}

.webkit #messagelist tr td.attachment,
.webkit #messagelist tr td.threads,
.webkit #messagelist tr td.status,
.webkit #messagelist tr td.flag,
.webkit #messagelist tr td.priority {
	width: 26px;
}

#messagelist tr td.threads {
	width: 26px;
}

.webkit #messagelist tr td.threads {
	width: 30px;
}

#messagelist tr td.threads,
#messagelist tr td.threads + td {
	border-left: 0;
}


#messagelist tr td.size {
	width: 60px;
	text-align: right;
}

#messagelist tr td.from,
#messagelist tr td.to,
#messagelist tr td.cc,
#messagelist tr td.replyto {
	width: 200px;
}

#messagelist tr td.date {
	width: 125px;
}

#messagelist tr.message {
/*	background-color: #fff; */
}

#messagelist tr.thread.expanded td {
	background-color: #ededed;
}

#messagelist tr.unread {
	font-weight: bold;
/*	background-color: #fff; */
}

#messagelist tr.flagged td,
#messagelist tr.flagged td a {
	color: #f30;
}

#messagelist thead tr td.sortedASC a,
#messagelist thead tr td.sortedDESC a {
	color: #004458;
	text-decoration: underline;
	background: url(images/listicons.png) right -912px no-repeat;
}

#messagelist thead tr td.sortedASC a {
	background-position: right -944px;
}

#messagelist td img {
	vertical-align: middle;
	display: inline-block;
}

#messagelist tbody td a {
	color: #333;
	text-decoration: none;
	white-space: nowrap;
	cursor: default;
}

#messagelist tbody tr td.flag,
#messagelist tbody tr td.status,
#messagelist tbody tr td.subject span.status {
	cursor: pointer;
}

#messagelist tr td.flag span,
#messagelist tr td.status span,
#messagelist tr td.attachment span,
#messagelist tr td.priority span {
	display: block;
	width: 20px;
}

#messagelist tr td div.collapsed,
#messagelist tr td div.expanded,
#messagelist tr td.threads div.listmenu,
#messagelist tr td.attachment span.attachment,
#messagelist tr td.attachment span.report,
#messagelist tr td.priority span.priority,
#messagelist tr td.priority span.prio1,
#messagelist tr td.priority span.prio2,
#messagelist tr td.priority span.prio3,
#messagelist tr td.priority span.prio4,
#messagelist tr td.priority span.prio5,
#messagelist tr td.flag span.flagged,
#messagelist tr td.flag span.unflagged,
#messagelist tr td.flag span.unflagged:hover,
#messagelist tr td.status span.status,
#messagelist tr td.status span.msgicon,
#messagelist tr td.status span.deleted,
#messagelist tr td.status span.unread,
#messagelist tr td.status span.unreadchildren,
#messagelist tr td.subject span.msgicon,
#messagelist tr td.subject span.deleted,
#messagelist tr td.subject span.unread,
#messagelist tr td.subject span.replied,
#messagelist tr td.subject span.forwarded,
#messagelist tr td.subject span.unreadchildren {
	display: inline-block;
	vertical-align: middle;
	height: 18px;
	width: 20px;
	padding: 0;
	background: url(images/listicons.png) -100px 0 no-repeat;
}

#messagelist tbody tr td.attachment span.attachment {
	background-position: 0 -996px;
}

#messagelist thead tr td.attachment span.attachment {
	background-position: -24px -996px;
}

#messagelist tbody tr td.attachment span.report {
	background-position: -24px -1116px;
}

#messagelist tr td.priority {
	padding-right: 0;
	text-align: right;
}

#messagelist tr td.priority span.prio5 {
	background-position: right -1905px;
}

#messagelist tr td.priority span.prio4 {
	background-position: right -1885px;
}

#messagelist tr td.priority span.prio2 {
	background-position: right -1865px;
}

#messagelist tr td.priority span.prio1 {
	background-position: right -1845px;
}

#messagelist tbody tr td.flag span.flagged {
	background-position: 0 -1036px;
}

#messagelist thead tr td.flag span.flagged {
	background-position: -24px -1036px;
}

#messagelist tr td.status span.msgicon:hover {
	background-position: -23px -1056px;
}

#messagelist tr td.flag span.unflagged:hover {
	background-position: -23px -1076px;
}

#messagelist tr td.subject span.msgicon,
#messagelist tr td.subject span.unreadchildren {
	background-position: 0 -1056px;
	margin: 0 1px 0 0;
	width: 24px;
}

#messagelist tr td.subject span.replied {
	background-position: 0 -1076px;
}

#messagelist tr td.subject span.forwarded {
	background-position: 0 -1096px;
}

#messagelist tr td.subject span.replied.forwarded {
	background-position: 0 -1116px;
}

#messagelist tr td.status span.msgicon,
#messagelist tr td.flag span.unflagged,
#messagelist tr td.status span.unreadchildren {
	background-position: 0 1056px; /* no icon */
}
/*
#messagelist tr td.status span.msgicon:hover {
	background-position: 0 -272px;
}
*/
#messagelist tr td.status span.deleted,
#messagelist tr td.status span.deleted:hover,
#messagelist tr td.subject span.deleted {
	background-position: -22px -1096px;
}

#messagelist tr td.status span.status,
#messagelist tr td.status span.unread,
#messagelist tr td.subject span.unread,
#messagelist tr td.status span.unread:hover {
	background-position: 0 -1016px;
}

#messagelist thead tr td.status span.status {
	background-position: -24px -1016px;
}

#messagelist tr td div.collapsed {
	background-position: 0 -1136px;
	cursor: pointer;
}

#messagelist tr td div.expanded {
	background-position: 0 -1156px;
	cursor: pointer;
}

#messagelist tr td.threads div.listmenu {
	background-position: 0 -976px;
	cursor: pointer;
	width: 26px;
}
/* ... */

